[package]
name = "wasmer-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

wasmi = { version = "0.18.1" }
anyhow = { version = "1.0.65" }
wat = "1"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }